--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hubot-help": "^1.0.1",
     "hubot-heroku-keepalive": "^1.0.3",
     "hubot-maps": "0.0.3",
+    "hubot-plusplus": "^1.4.0",
     "hubot-pugme": "^0.1.1",
     "hubot-redis-brain": "^1.0.0",
     "hubot-rules": "^1.0.0",
